tests/NormalTests/paczka1/small_fuzzy/93213800.err
Error in line 3: 9xzuwEqpwYJ S11 36,8
Error in line 4: 9xzuwEqpwYJ A300 61,2
Error in line 10: A300 S11 39,8
